Fixed spacing issues due to bad output statements

--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -59,7 +59,8 @@ img {
 @media (max-width: 767px) {
 
 	h1 {
-		font-size: 2em;
+		font-size: 34px;
+		line-height: 38px;
 	}
 
 	h2 {
